refac :hammer: atualizando testes, passam a usar uuid